Changed recap to recapitulation for all chapters where needed.

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -22,6 +22,6 @@ The aim of this study is to experiment with two different languages working toge
 Moreover, this will be an attempt to answer the question how practical \progLang{Prolog} fits into \progLang{Haskell}.                  
 
 
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 \end{document}
