--- a/embedding.tex
+++ b/embedding.tex
@@ -473,7 +473,7 @@ As discussed in the\marginpar{{\color{red}\large *}}\endnote{%
 \item ????
 \end{enumerate}
 
-\section{Chapter Recap\protect{\Huge\color{red} itulation}}
+\section{Chapter Recapitulation}
 
 
 \end{document}
