--- a/futureScope.tex
+++ b/futureScope.tex
@@ -51,6 +51,6 @@ data ResultWithIO typevariableforpureexpressions typevariableforioexpressions
 \end{enumerate}
 
 
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 \end{document}
