--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -41,7 +41,7 @@ Standard set: foo, bar, baz, foobar/quux, quuux, quuuux, ....
 example: \yyy{"}{``}Suppose I have a list, foo, with a node, bar, ...\yyy{"}{''}
 
 
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 \end{document}
  
