--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -303,6 +303,6 @@ Unifying / Marrying / Merging / Combining Programming Paradigms / Theories
 
 
 
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 \end{document}
