--- a/proto1.tex
+++ b/proto1.tex
@@ -1034,7 +1034,7 @@ f1 dict = do
 \end{comment}
 
 \clearpage
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 \if\jobname={thesis-solanki}\else
 \begin{scope}
