--- a/proto3.tex
+++ b/proto3.tex
@@ -910,7 +910,7 @@ stConvertor xs = Prelude.map (\(varId, p) -> (->-) varId (unFlatten $ unP $ p)) 
 \end{minted}
 
 
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 
 \end{document}
