--- a/proto4.tex
+++ b/proto4.tex
@@ -510,7 +510,7 @@ Loading package unification-fd-0.10.0.1 ... linking ... done.
 \end{minted}
 
 
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 
 \end{document}
