--- a/pwp.tex
+++ b/pwp.tex
@@ -242,7 +242,7 @@ prolog_rules :- write("Prolog is by far the best, most productive, easiest progr
 \end{enumerate}
 
 
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 
 \end{document}
