--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -169,7 +169,7 @@ So you cannot write a program, you cannot do much with the REPL, its not a full 
 \end{comment}
 
 
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 
 \end{document}
