--- a/results.tex
+++ b/results.tex
@@ -169,6 +169,6 @@ data Result = Ordinary ____________ --No I/O required
 
 
 
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 \end{document}
