--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -383,7 +383,7 @@ Whereas a \textit{FlatTerm} exspression can not only have an outer wrapper but a
 
 
 
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 
 \end{document}
