changed bullets to sub sections in multiparadigm languages

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -39,9 +39,9 @@ Programming Paradigms.
 \end{comment}  
 
 \section{The Informal Content from Blogs, Articles and Internet Discussions}
-\begin{description}
+%\begin{description}
   
-\item[$\bullet$] Multi Paradigm Languages
+\subsection{Multi Paradigm Languages}
 
   A lot has been talked and discussed on coming to clear grounds about the classification of programming languages.
   If the conventional ideology is considered then the scope of each language is pretty much infinite as small
@@ -67,7 +67,7 @@ Programming Paradigms.
 \end{enumerate}
 \end{comment}
 
-\item[$\bullet$] Functional Logic Programming Languages
+\subsection{Functional Logic Programming Languages}
 
   Continuing from the previous section, narrowing down the search by considering only multi paradigm declarative
   languages namely, Functional Logical programming languages.
@@ -95,7 +95,7 @@ Programming Paradigms.
  
 \end{enumerate}
 \end{comment}
-\end{description}
+%\end{description}
 
 
 \begin{comment}
@@ -112,8 +112,8 @@ There are a lot of people working on this but, I found a lot of papers of two of
 \end{comment}
 
 \section{Literature and Publications}
-\begin{description}
-\item[$\bullet$] Multi Paradigm Languages
+%\begin{description}
+\subsection{Multi Paradigm Languages}
   Possibly one of the most important works towards bringing programming styles together is the book by C.A.R.
   Hoare \cite{hoare1998unifying} which points out that among the large number of programming paradigms and/or
   theories the unification theory serves as a complementary rather than a replacement to relate the universe.
@@ -123,7 +123,7 @@ There are a lot of people working on this but, I found a lot of papers of two of
   monads \cite{gibbons2013unifying}.
  
 
-\item[$\bullet$] Functional Logic Programming Languages
+\subsection{Functional Logic Programming Languages}
 
 A recent survey \cite{hanus2007multi} throws light on these hybrid languages. 
 
@@ -155,7 +155,7 @@ that works both ways and hence variables can be on either sides.
 Although the language can do a lot but gaps do exist such as the improvement of narrowing techniques.
  
  
-\end{description}
+%\end{description}
 
 \section{Some Multi Paradigm Languages}
 
