changed endnote comments to \mehul{}, removed large subsections of comments for better readability from most chapters

--- a/background.tex
+++ b/background.tex
@@ -49,7 +49,7 @@ $\lambda$ calculus.
 Most typed $\lambda$ calculus langauges are based on Hindley-Milner or Damas-Milner or Damas- Hindley-Milner
 \cite{website:hdmtypesystemwiki} type system.\endnote{%
   Can you find an article or book rather than a website as a reference here?
-  \cite{hindley1969principal}, \cite{milner1978theory}
+  \mehul{\cite{hindley1969principal}, \cite{milner1978theory}}
 }
 The Hindley-Milner like type systems have the ability to give a most general type of a program without any
 annotations. 
@@ -57,7 +57,7 @@ The algorithm \cite{website:hdmtypesystem} works by initially assigning undefine
 the body of the function for operations that impose type constraints and go on mapping the types of each of the
 variables, lastly unifying all of the constraints giving the type of the result.\endnote{%
   What is the relevance of this \P{} to the thesis?
-  To explain the working, not directly required I guess but since \progLang{Haskell} is statically typed
+  \mehul{To explain the working, not directly required I guess but since \progLang{Haskell} is statically typed}
 }
 
 Logical Programming, \cite{spivey1995introduction} on the other hand is based on formal logic.
@@ -228,7 +228,7 @@ The second predicate matches the head of the first and the resulting
 lists and then \yyy{recurs}{\mbox{recurses}} on the tails. 
 The same in \progLang{Haskell},\endnote{%
   \textcolor{dark-green}{Is the point here that templating helps, or what?}\newline
-  \textcolor{dark-red}{it is just one of the many ways to bring the languages together}\newline
+  \mehul{it is just one of the many ways to bring the languages together}\newline
   \textcolor{dark-green}{Say something in the text.}
 }
 %\begin{minted}[linenos]{haskell}
