--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -74,7 +74,7 @@ discussed below{\large,} along with their shortcomings.
 }
   in \progLang{Prolog}.\endnote{%
     What does this point mean?
-    I would have to think\yyy{}{\Large;} I do not remember.
+    \mehul{I would have to think\yyy{}{\Large;} I do not remember.}
 }
 \end{enumerate}
 
@@ -83,7 +83,7 @@ And as far as the idea of merging paradigms goes, it is not the main focus of th
 A handful of crossover hybrid languages based on \progLang{Haskell} exist, \progLang{Curry} \cite{website:curry}
 being the prominent one.\endnote{%
   I think that this fits in with the discussion of \progLang{Scala} in the previous chapter.
-  added \progLang{Scala} stuff in previous chapter
+  \mehul{added \progLang{Scala} stuff in previous chapter}
 }
 Moving away from \progLang{Haskell} and exploring other languages from different paradigms, a respectable number of
 crossover implementations exist but again most of them have faded out.\endnote{%
@@ -237,37 +237,6 @@ statement) which when executed would result in a side effect but till that point
   can be controlled.
 
 \end{enumerate}
-
-%\texttt{\bfseries{write a paragraph}}
-\begin{comment}
-\begin{enumerate}
-\item
-  Create a \textsc{Prolog} library which comes the closest to a complete \textsc{Prolog} like Language, not only
-  the Declarative concepts but also a lot of Practical concepts like cuts, assert, fail, setOf, bagOf among others.
-
-\item
-  Do away with the shell approach.
-  One must be able to write a program just the way one can write a \textsc{Haskell} program and the goal is passed
-  as a parameter to the main function and the result is achieved by running it.
-
-\item
-  Moreover, make an attempt to add some features which are related to Functional Logic Programming Languages, like
-  narrowing and residuation among others.
-
-\item Furthermore, adding or adjusting \textsc{Prolog} IO into the \textsc{Haskell} IO Monad.
-
-\item
-  Translating a \textsc{Prolog} program into a \textsc{Haskell} program, for example two programs with same
-  declarative meaning but different computational complexities in \textsc{Prolog} translated into \textsc{Haskell}.
-  (Something similar is there in a paper called Higher Order Transformation of Logic Programs)
-
-\item Tackling Translation of Tail Recursion in \textsc{Prolog} Programs.
-
-\item Able to recognize and work with all kinds of lists supported by \textsc{Prolog}.
-
-\item Anything else ???????????????
-\end{enumerate}
-\end{comment}
 
 
 \section{Chapter Recapitulation}
