--- a/introduction.tex
+++ b/introduction.tex
@@ -17,37 +17,16 @@ This chapter introduces the scope of the thesis along with the preliminary argum
 
 
 \section{Beginnings}
-\begin{comment}
-Computers have become a part of everyone's life. From the ones in our pockets to the ones on desks or in our school bags, working or in fact living without
-them is difficult if not impossible. All the more reason to know how to use one. Simply speaking just using a computer these days is not enough. To be able
-to utilise their true potential, one must go deeper and communicate with them. This is where the art of programming steps in.
-\end{comment}
 
 Programming has become an integral part of working and interacting with computers and day by day more and more complex
 problems are being tackled using the power of programming technologies.
 
-\begin{comment}
-It is possibly the only way to talk to computers and hence the need for a robust and multi purpose programming language
-has never been more urgent.\endnote{%
-  This argument for the need for robust, multi-purpose languages seems weak.
-  Can we either drop it, or extend it somewhat?
-}
-\end{comment}
-
 A programming language must not only provide an easy to use environment but also adaptability towards the problem domain.
-\begin{comment}
-The desirability of a programming language depends on a lot of factors such as the ease of use, the features and
-functionalities that it provides, adaptability and what sort of problems \yyy{can it}{it can} solve.
-One is spoilt for choice with a number of options for a wide variety of programming paradigms, for example Object
-Oriented Languages.\endnote{%
-  Rewrite this sentence.
-}
-\end{comment}
 
 Over the last decade the declarative style of programming has gained popularity.
 The methodologies that have stood out are the functional and logical approaches.\endnote{%
-  What style guide are you using to determine capitalization? none at the moment
-  but I will change certain capitals to small
+  What style guide are you using to determine capitalization? \newline 
+  \mehul{none at the moment but I will change certain capitals to small}
 }
 The former is based on functions and lambda calculus, while the latter is based on horn clause logic.
 Each of them has its own advantages and ﬂaws.
@@ -80,10 +59,10 @@ capabilities.
 Over the years the development of programming languages has become more and more rapid.
 Today the number of is in the thousands and counting \cite{website:timelineproglangwiki, website:historyofproglang}.\endnote{%
   Reference?  How did you come up with this estimate?
+  
+\mehul{https://en.wikipedia.org/wiki/Timeline\_of\_programming\_languages}
 
-https://en.wikipedia.org/wiki/Timeline\_of\_programming\_languages
-
-http://www.thesoftwareguild.com/history-of-programming-languages/
+\mehul{http://www.thesoftwareguild.com/history-of-programming-languages/}
 }
 The successors attempt to introduce new concepts and features to simplify the process of coding a solution and assist
 the programmer by lessening the burden of carrying out standard tasks and procedures.
@@ -165,7 +144,7 @@ on.\endnote{%
 Putting all of the above together, Domain Specific Languages\endnote{%
   I have the feeling that you should introduce the concept of DSLs
   slightly higher.
-  higher ???
+  \mehul{higher ???}
 }
 are pretty good in doing what they are designed to do, but nothing else, resulting in choosing a different language
 every time.
