--- a/proto1.tex
+++ b/proto1.tex
@@ -323,20 +323,6 @@ are not accessible as the language can have expressions of only one
 type i.e. ``Term''.
 
 \begin{comment}
-\begin{minted}[linenos]{haskell}
-type Atom         = String
-data VariableName = VariableName Int String
-      deriving (Eq, Data, Typeable, Ord)
-data Term = Struct Atom [Term]
-          | Var VariableName
-          | Wildcard -- Don't cares
-          | Cut Int
-      deriving (Eq, Data, Typeable)
-\end{minted}
-Also one cannot create Quantifiers plus logic
-\end{comment}
-
-\begin{comment}
 The solution \xxx{to} would be to add a type constructor split the data type into two levels, a single recursive
 data type is replaced by two related data types.
 \end{comment}
@@ -369,7 +355,7 @@ A more accurate way of saying it would be that \textit{a} can be a \textit{kind}
 \progLang{Haskell}.\endnote{%
   Why do we explain \textit{kinds}?
   Is this in preparation for \texttt{\bfseries Functor}?
-  Well Int, String etc etc are kinds in haskell so a FlatTerm int where int is *
+  \mehul{Well Int, String etc etc are kinds in haskell so a FlatTerm int where int is *}
 }
 
 In type theory, a kind is the type of a type constructor or, less commonly, the type of a higher-order type operator. A kind system is
@@ -574,7 +560,7 @@ between a functor and a monad.
 We create the necessary instances\endnote{%
   I am deeply suspicious of the instance for \texttt{Applicative} given.
 
-  I agree, I think I just created one for the purpose of the diagram.
+  \mehul{I agree, I think I just created one for the purpose of the diagram.}
 }
 as shown in Figure~\ref{tab:flat-term-class-inst}.
 \begin{code-list}
@@ -837,201 +823,6 @@ The final reconversion to return a list of substitutions,
   \caption{Variable substitution list extraction}
   \label{tab:vars-extract}
 \end{code-list}
-
-\begin{comment}
-
-\section{Black box}
-
-
-\section{Something about unification-fd and Monadic Unification}
-Library \cite{unification-fd-lib}
-
-
-Tutorial 1 \cite{website:unification-fd-lib-tutorial1}
-
-
-Tutorial 2 \cite{website:unification-fd-lib-tutorial2}
-
-
-\begin{enumerate}
-\item What library provides ?
-
-This module provides first-order structural unification over general structure types. It also provides the standard suite of functions
-accompanying unification (applying bindings, getting free variables, etc.).
-
-The implementation makes use of numerous optimization techniques. First, we use path compression everywhere (for weighted path compression
-see Control.Unification.Ranked). Second, we replace the occurs-check with visited-sets. Third, we use a technique for aggressive
-opportunistic observable sharing; that is, we track as much sharing as possible in the bindings (without introducing new variables), so
-that we can compare bound variables directly and therefore eliminate redundant unifications.
-
-
-\item Unifiable stuff
-
-  The basic class for generating, reading, and writing to bindings stored in a monad.
-  These three functionalities could be split apart, but are combined in order to simplify contexts.
-  Also, because most functions reading bindings will also perform path compression, there's no way to distinguish
-  \yyy{"}{``}true\yyy{"}{''} mutation from mere path compression.
-
-  The superclass constraints are there to simplify contexts, since we make the same assumptions everywhere we use
-  BindingMonad.
-
-
-  In order to use our T data type with the rest of the API, we'll need to give a Unifiable instance for it.
-  Before we do that we'll have to\eref{must-have-to} give Functor, Foldable, and Traversable instances.
-  These are straightforward and can be automatically derived with the appropriate language pragmas.
-
-  The Unifiable class gives one step of the unification process.
-  Just as we only need to specify one level of the ADT (i.e., T) and then we can use the library's UTerm to
-  generate the recursive ADT, so too we only need to specify one level of the unification (i.e., zipMatch) and then
-  we can use the library's operators to perform the recursive unification, subsumption, etc.
-
-  The zipMatch function takes two arguments of type t a.
-  The abstract t will be our concrete T type.
-  The abstract a is polymorphic, which ensures that we can't mess around with more than one level of the term at
-  once.
-  If we abandon that guarantee, then you can think of it as if a is UTerm T v.
-  Thus,t a means T (UTerm T v); and T (UTerm T v) is essentially the type UTerm T v with the added guarantee that
-  the values aren't in fact variables.
-  Thus, the arguments to zipMatch are non-variable terms.
-
-  The zipMatch method has the rather complicated return type: Maybe (t (Either a (a,a))).
-  Let's unpack this a bit by thinking about how unification works.
-  When we try to unify two terms, first we look at their head constructors.
-  If the constructors are different, then the terms aren't unifiable, so we return Nothing to indicate that
-  unification has failed.
-  Otherwise, the constructors match, so we have to\eref{must-have-to} recursively unify their subterms.
-  Since the T structures of the two terms match, we can return Just t0 where t0 has the same T structure as both
-  input terms.
-  Where we still have to\eref{must-have-to} recursively unify subterms, we fill t0 with Right(l,r) values where l is a subterm of the
-  left argument to zipMatch and r is the corresponding subterm of the right argument.
-  Thus, zipMatch is a generalized zipping function for combining the shared structure and pairing up substructures.
-  And now, the implementation:
-
-\begin{minted}[linenos]{haskell}
-
-instance Unifiable T where
-    zipMatch (T m ls) (T n rs)
-        | m /= n    = Nothing
-        | otherwise =
-            T n <$> pairWith (\l r -> Right(l,r)) ls rs
-\end{minted}
-Where list-extras:Data.List.Extras.Pair.pairWith is a version of zip which returns Nothing if the lists have different lengths. So, if the
-names m and n match, and if the two arguments have the same number of subterms, then we pair those subterms off in order; otherwise, either
-the names or the lengths don't match, so we return Nothing.
-
-
-\item UTerm stuff
-
-The type of terms generated by structures t over variables v. The structure type should implement Unifiable and the variable type should
-implement Variable.
-
-The Show instance doesn't show the constructors, in order to improve legibility for large terms.
-
-All the category theoretic instances (Functor, Foldable, Traversable,...) are provided because they are often useful; however, beware that
-since the implementations must be pure, they cannot read variables bound in the current context and therefore can create incoherent
-results. Therefore, you should apply the current bindings before using any of the functions provided by those classes.
-
-
-\item STVar stuff
-
-This module defines an implementation of unification variables using the ST monad.
-
-
-
-\item IntVar stuff
-
-
-This module defines a state monad for functional pointers represented by integers as keys into an IntMap. This technique was independently
-discovered by Dijkstra et al. This module extends the approach by using a state monad transformer, which can be made into a backtracking
-state monad by setting the underlying monad to some MonadLogic (part of the logict library, described by Kiselyov et al.).
-
-Atze Dijkstra, Arie Middelkoop, S. Doaitse Swierstra (2008) Efficient Functional Unification and Substitution, Technical Report
-UU-CS-2008-027, Utrecht University.
-
-Oleg Kiselyov, Chung-chieh Shan, Daniel P. Friedman, and Amr Sabry (2005) Backtracking, Interleaving, and Terminating Monad Transformers,
-ICFP
-
-A \yyy{"}{``}mutable\yyy{"}{''} unification variable implemented by an integer. This provides an entirely pure alternative to truly mutable alternatives (like
-STVar), which can make backtracking easier.
-
-N.B., because this implementation is pure, we can use it for both ranked and unranked monads.
-
-\item Binding Monad Stuff
-
-A monad for handling STVar bindings.
-
-Run the ST ranked binding monad. N.B., because STVar are rank-2 quantified, this guarantees that the return value has no such references.
-However, in order to remove the references from terms, you'll need to explicitly apply the bindings and ground the term.
-
-\item U.unify stuff
-
-Unify two terms, or throw an error with an explanation of why unification failed. Since bindings are stored in the monad, the two input
-terms and the output term are all equivalent if unification succeeds. However, the returned value makes use of aggressive opportunistic
-observable sharing, so it will be more efficient to use it in future calculations than either argument.
-
-\item U.unifyOccurs
-
-A variant of unify which uses occursIn instead of visited-sets. This should only be used when eager throwing of occursFailure errors is
-absolutely essential (or for testing the correctness of unify). Performing the occurs-check is expensive. Not only is it slow, it's
-asymptotically slow since it can cause the same subterm to be traversed multiple times.
-
-\clearpage
-
-\item Translation stuff
-
-\begin{code-list}
-\begin{minted}[linenos,frame=single]{haskell}
-monadicUnification :: (BindingMonad FlatTerm (STVar s FlatTerm) (ST.STBinding s)) => (forall s. ((Fix FlatTerm) -> (Fix FlatTerm) ->
-  ErrorT (UT.UFailure (FlatTerm) (ST.STVar s (FlatTerm)))
-           (ST.STBinding s) (UT.UTerm (FlatTerm) (ST.STVar s (FlatTerm)),
-            Map VariableName (ST.STVar s (FlatTerm)))))
-monadicUnification t1 t2 = do
---  let
---    t1f = termFlattener t1
---    t2f = termFlattener t2
-  (x1,d1) <- lift . translateToUTerm $ t1
-  (x2,d2) <- lift . translateToUTerm $ t2
-  x3 <- U.unify x1 x2
-  --get state from somehwere, state -> dict
-  return $! (x3, d1 `Map.union` d2)
-
-
-goUnify ::
-  (forall s. (BindingMonad FlatTerm (STVar s FlatTerm) (ST.STBinding s))
-  =>
-      (ErrorT
-          (UT.UFailure FlatTerm (ST.STVar s FlatTerm))
-          (ST.STBinding s)
-          (UT.UTerm FlatTerm (ST.STVar s FlatTerm),
-             Map VariableName (ST.STVar s FlatTerm)))
-     )
-  -> [(VariableName, Prolog)]
-goUnify test = ST.runSTBinding $ do
-  answer <- runErrorT $ test --ERROR
-  case answer of
-    (Left _)            -> return []
-    (Right (_, dict))   -> f1 dict
-
-
-f1 ::
-  (BindingMonad FlatTerm (STVar s FlatTerm) (ST.STBinding s))
-  => (forall s. Map VariableName (STVar s FlatTerm)
-      -> (ST.STBinding s [(VariableName, Prolog)])
-     )
-f1 dict = do
-  let ld1 = Map.toList dict
-  ld2 <- Control.Monad.Error.sequence [ v1 | (k,v) <- ld1, let v1 = UT.lookupVar v]
-  let ld3 = [ (k,v) | ((k,_),Just v) <- ld1 `zip` ld2]
-      ld4 = [ (k,v) | (k,v2) <- ld3, let v = translateFromUTerm dict v2 ]
-  return ld4
-\end{minted}
-  \vspace*{-1.0\baselineskip}
-  \caption{A sample Minted figure}
-  \label{fig:sample}
-\end{code-list}
-
-\end{enumerate}
-\end{comment}
 
 \clearpage
 \section{Chapter Recapitulation}
