Commented on non-ascii characters.

--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -21,9 +21,27 @@ By mathematical analogy, a metasyntactic variable is a word that is a variable f
 
 
 \cite{webiste:metasyntacticvariablescatb}
-A name used in examples and understood to stand for whatever thing is under discussion, or any random member of a class of things under discussion. The word foo is the canonical example. To avoid confusion, hackers never (well, hardly ever) use ‘foo’ or other words like it as permanent names for anything. In filenames, a common convention is that any filename beginning with a metasyntactic-variable name is a scratch file that may be deleted at any time.
+A name used in examples and understood to stand for whatever thing is under discussion, or any random member of a class of things under discussion. The word foo is the canonical example. To avoid confusion, hackers never (well, hardly ever) use \yyy{‘foo’}{`foo'}\endnote{%
+  Avoid non-\textsc{ascii} characters.  Left single quote (u\(+\)x2018) should be entered in files as a grave
+  accent (u\(+\)x60), and right single quote (u\(+\)x2019) as a plain single quote (0x27).
 
-Metasyntactic variables are so called because they are variables in the metalanguage used to talk about programs etc; they are variables whose values are often variables (as in usages like “the value of f(foo,bar) is the sum of foo and bar”). However, it has been plausibly suggested that the real reason for the term “metasyntactic variable” is that it sounds good. To some extent, the list of one's preferred metasyntactic variables is a cultural signature. They occur both in series (used for related groups of variables or objects) and as singletons. Here are a few common signatures:
+  Similarly, left double quote (u\(+\)x201c) should be entered as two grave accents, and right double quote as two
+  single quotes.
+
+  Em-dashes (u\(+\)x2014)---used to separate thoughts inside sentences---are typed as three minus signs.
+
+  En-dashes (u\(+\)x2013), used to separate numbers, for instance 3--5, are typed as two minus signs.
+}\elabel{end:non-ascii}
+or other words like it as permanent names for anything. In filenames, a common convention is that any filename beginning with a metasyntactic-variable name is a scratch file that may be deleted at any time.
+
+Metasyntactic variables are so called because they are variables in the metalanguage used to talk about programs
+etc; they are variables whose values are often variables (as in usages like \yyy{“}{``}the value of f(foo,bar) is
+the sum of foo and bar\yyy{”}{''}).
+However, it has been plausibly suggested that the real reason for the term \yy{“}{``}metasyntactic
+variable\yyy{”}{''} is that it sounds good.
+To some extent, the list of one's preferred metasyntactic variables is a cultural signature.
+They occur both in series (used for related groups of variables or objects) and as singletons.
+Here are a few common signatures:
 
 
 \cite{webiste:metasyntacticvariableswhatistectarget}
