--- a/prologin.tex
+++ b/prologin.tex
@@ -18,7 +18,7 @@ Prolog in \_\_\_\_\_\_
 
 \item[$\bullet$] Books
 \begin{enumerate}
-\item Warren’s Abstract Machine A TUTORIAL RECONSTRUCTION, \cite{ait1999warren}
+\item Warren's Abstract Machine A TUTORIAL RECONSTRUCTION, \cite{ait1999warren}
 \item LOGLISP: an alternative to PROLOG, \cite{robinson1980loglisp}
 \end{enumerate}
 
