--- a/proto4.tex
+++ b/proto4.tex
@@ -19,7 +19,7 @@ So something like a \yyy{"}{``}data\yyy{"}{''} declaration for IO operations
 \cite{website:ioispurechristaylor}
 
 A common question amongst people learning Haskell is whether I/O is pure or not. Haskell advertises itself as a purely functional 
-programming language, but I/O looks like it’s inherently impure - for example, the function getLine, which gets a line from stdin, returns 
+programming language, but I/O looks like it’s\eref{non-ascii} inherently impure - for example, the function getLine, which gets a line from stdin, returns 
 a different result depending on what the user types:
 
 \begin{minted}[linenos]{haskell}
