--- a/quasiquotation.tex
+++ b/quasiquotation.tex
@@ -48,7 +48,7 @@
 \begin{enumerate}
 \item \cite{website:quotationstanford}
 
-When language is used to attribute properties to language or otherwise theorize about it, a linguistic device is needed that ‘turns 
+When language is used to attribute properties to language or otherwise theorize about it, a linguistic device is needed that ‘turns\eref{non-ascii} 
 language on itself’. Quotation is one such device. It is our primary meta-linguistic tool.
 
 \item \cite{website:quasiquotationfreedictionary}
