--- a/toDo.tex
+++ b/toDo.tex
@@ -26,16 +26,16 @@
 
 \begin{enumerate}
 \item [\textbf{2015-10-29}]
-\item Abstract is too long and incorrect.
-\item Remove first \P{} from intro.
-\item Thesis statement is close to being an abstract.
-
 \item [\textbf{Either}]
 \item
   We need a convention for what words to capitalize in chapter and
   section titles.
 
 \item [\textbf{Mehul}]
+
+\item
+  Abstract is too long.  (Guidelines limit it to 150 words.  Currently
+  at 275-ish.)
 
 \item
   Remove sentences that begin with ``And''.
